<resources>
    <string name="app_name">Cabscout-Driver</string>
    <string name="title_activity_maps">CabScout-Driver</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_details">View Details</string>
    <string name="pickup_address">PICKUP ADDRESS</string>
    <string name="delivery_address">DELIVERY ADDRESS</string>
    <string name="map">Map</string>
    <string name="ride_history">Rides History</string>
    <string name="my_booking">My Booking</string>
    <string name="setting">Settings</string>
    <string name="contact">Contact</string>
    <string name="logout">Logout</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="settings">Setting</string>

  <!--  <string name="creat_account_title">CREATE ACCOUNT</string>-->
    <string name="create_account">Cabscout,LLC is a technology company that provides a dispatching to cab/car service compa-nies. To Access you must specify your preferred cab/car service cmpany</string>

    <!-- Country Code -->
    <string-array name="country_arrays">
        <item>United States</item>
        <item>Mexico</item>
        <item>Canada</item>
        <item>France</item>
        <item>Italy</item>
        <item>Australia</item>
        <item>New Zealand</item>
    </string-array>
</resources>
